kubernetes-networks/canary/http-deployment-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-svc
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
      - name: http-svc
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: http-svc
  namespace: prod
  labels:
    app: http-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-svc
  type: ClusterIP
