kubernetes-networks/canary/http-canary-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-svc-canary
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
  - host: http-svc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-svc
            port: 
              number: 80
