kubernetes-networks/canary/http-prod-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-svc-prod
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: http-svc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-svc
            port: 
              number: 80
